--- a/views/index.jade
+++ b/views/index.jade
@@ -1,5 +1,12 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
+  #container
+    div(ng-view)
+
+  script(src='javascripts/bower_components/angular/angular.js')
+  script(src='javascripts/bower_components/angular-route/angular-route.js')
+  script(src='javascripts/bower_components/angular-resource/angular-resource.js')
+  script(src='javascripts/app.js')
+  script(src='javascripts/services.js')
+  script(src='javascripts/controllers.js')
