--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,5 +1,5 @@
 doctype html
-html
+html(ng-app='instaGridApp')
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
