--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,1 +1,1 @@
-body{font:18px "Lucida Sans",Helvetica,Arial,sans-serif}a{color:#00B7FF}
+body{font:18px "Lucida Sans",Helvetica,Arial,sans-serif;padding:0;margin:0}a{color:#00B7FF}#container{position:relative}#container #controls{position:static}#container #grid .cell{float:left;height:150px;width:150px}
