--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -1,7 +1,25 @@
 body {
   font: 18px "Lucida Sans", Helvetica, Arial, sans-serif;
+  padding: 0;
+  margin: 0;
 }
 
 a {
   color: #00B7FF;
+}
+
+#container {
+  position: relative;
+
+  #controls {
+    position: static;
+  }
+
+  #grid {
+    .cell {
+      float: left;
+      height: 150px;
+      width: 150px;
+    }
+  }
 }
