--- a/views/index.jade
+++ b/views/index.jade
@@ -4,6 +4,7 @@ block content
   #container
     div(ng-view)
 
+  script(src='javascripts/bower_components/lodash/dist/lodash.js')
   script(src='javascripts/bower_components/angular/angular.js')
   script(src='javascripts/bower_components/angular-route/angular-route.js')
   script(src='javascripts/bower_components/angular-resource/angular-resource.js')
