--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -2,10 +2,16 @@ body {
   font: 18px "Lucida Sans", Helvetica, Arial, sans-serif;
   padding: 0;
   margin: 0;
+  background: black;
+  color: white;
 }
 
 a {
   color: #00B7FF;
+  text-decoration: none;
+}
+img {
+  border: none;
 }
 
 #container {
@@ -18,8 +24,37 @@ a {
   #grid {
     .cell {
       float: left;
-      height: 150px;
-      width: 150px;
+      height: 306px;
+      width: 306px;
+      position: relative;
+      z-index: 1;
+      -webkit-perspective: 1000;
+      .cell-content {
+        width: 100%;
+        height: 100%;
+        transform-style: preserve-3d;
+        transition: all 0.10s linear;
+        .cell-face {
+          position: absolute;
+          width: 100%;
+          height: 100%;
+          -webkit-backface-visibility: hidden;
+        }
+        .cell-face.cell-info {
+          display: block;
+          -webkit-transform: rotateY(180deg);
+          box-sizing: border-box;
+          padding: 10px;
+          text-align: center;
+          background-color: black;
+          color: #ccc;
+          border: 5px solid #333;
+        }
+
+      }
+    }
+    .cell:hover .cell-content {
+      -webkit-transform: rotateY(180deg);
     }
   }
 }
