--- a/views/index.jade
+++ b/views/index.jade
@@ -4,10 +4,11 @@ block content
   #container
     div(ng-view)
 
-  script(src='javascripts/bower_components/lodash/dist/lodash.js')
-  script(src='javascripts/bower_components/angular/angular.js')
-  script(src='javascripts/bower_components/angular-route/angular-route.js')
-  script(src='javascripts/bower_components/angular-resource/angular-resource.js')
-  script(src='javascripts/app.js')
-  script(src='javascripts/services.js')
-  script(src='javascripts/controllers.js')
+  script(src='/javascripts/bower_components/moment/moment.js')
+  script(src='/javascripts/bower_components/lodash/dist/lodash.js')
+  script(src='/javascripts/bower_components/angular/angular.js')
+  script(src='/javascripts/bower_components/angular-route/angular-route.js')
+  script(src='/javascripts/bower_components/angular-resource/angular-resource.js')
+  script(src='/javascripts/app.js')
+  script(src='/javascripts/services.js')
+  script(src='/javascripts/controllers.js')
