--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -1,3 +1,6 @@
+html, body {
+  height: 100%
+}
 body {
   font: 18px "Lucida Sans", Helvetica, Arial, sans-serif;
   padding: 0;
@@ -16,6 +19,8 @@ img {
 
 #container {
   position: relative;
+  overflow: hidden;
+  min-height: 90%;
 
   #grid {
     .cell {
