fixed instragram user link

--- a/public/partials/grid.html
+++ b/public/partials/grid.html
@@ -14,7 +14,7 @@
       <div class="cell-content">
         <img class="cell-face cell-image" src={{image.medium}}>
         <div class="cell-face cell-info">
-          <div class="name"><a href="http://twitter.com/{{image.user.username}}" target="_blank">{{image.user.full_name}}</a></div>
+          <div class="name"><a href="http://instagram.com/{{image.user.username}}" target="_blank">{{image.user.full_name}}</a></div>
           <img class="profile-picture" src="{{image.user.profile_picture}}">
           <div class="likes">{{image.likesCount}} likes</div>
           <div class="date">{{image.timestamp | formatTimestamp}}</div>
